--- a/package.json
+++ b/package.json
@@ -6,13 +6,11 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
-    "axios": "^0.21.1",
-    "cookie-parser": "~1.4.4",
+    "axios": "^1.2.0",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
-    "debug": "~2.6.9",
-    "express": "~4.16.1",
-    "http-errors": "~1.6.3",
-    "jade": "~1.11.0",
-    "morgan": "~1.9.1"
+    "debug": "^4.3.4",
+    "express": "^4.18.2",
+    "http-errors": "~1.6.3"
   }
 }
