--- a/package.json
+++ b/package.json
@@ -1,16 +1,20 @@
 {
   "name": "cors-proxy",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "private": true,
+  "type": "commonjs",
+  "engines": {
+    "node": "20.4.0"
+  },
   "scripts": {
     "start": "node ./bin/www"
   },
   "dependencies": {
-    "axios": "^1.3.4",
+    "axios": "^1.5.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "debug": "^4.3.4",
     "express": "^4.18.2",
-    "http-errors": "~1.6.3"
+    "http-errors": "^2.0.0"
   }
 }
