--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     "debug": "^4.3.4",
     "express": "^4.18.2",
     "http-errors": "^2.0.0"
+  },
+  "devDependencies": {
+    "eslint": "^8.50.0"
   }
 }
